# openfang

./: Cargo.toml  README.md
crates/openfang-api/static/: index_body.html
crates/openfang-api/static/css/: components.css  theme.css
crates/openfang-api/static/js/pages/: settings.js
crates/openfang-kernel/: Cargo.toml
crates/openfang-runtime/: Cargo.toml
crates/openfang-runtime/src/: model_catalog.rs  web_search.rs
crates/openfang-runtime/src/drivers/: mod.rs  uar.rs
